update city api
